[package]
name = "ctrminsketch"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/al8n/ctrminsketch"
homepage = "https://github.com/al8n/ctrminsketch"
documentation = "https://docs.rs/ctrminsketch"
description = "Count-Min Sketch probabilistic data structures for frequency estimation"
license = "MIT OR Apache-2.0"
rust-version = "1.56"
categories = ["data-structures", "algorithms", "no-std", "no-std::no-alloc"]
keywords = ["count-min-sketch", "cms", "frequency-sketch", "cmsketch"]

[[bench]]
path = "benches/freqd4c4.rs"
name = "freqd4c4"
harness = false

[features]
default = ["std"]
alloc = []
std = []

[dependencies]
varing = { version = "0.10", default-features = false }


[dev-dependencies]
criterion = "0.8"
getrandom = { version = "0.3", default-features = false }


[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(tarpaulin)',
] }
